--- a/source/css/ui.scss
+++ b/source/css/ui.scss
@@ -165,6 +165,11 @@ code {
         outline: none;
       }
     }
+    .code {
+      white-space: pre-line;
+      max-height: 70px;
+      overflow-y: scroll;
+    }
   }
   .dataset-select {
     width: 100%;
