a few small style tweaks

--- a/source/css/ui.scss
+++ b/source/css/ui.scss
@@ -11,6 +11,7 @@ select {
   font-size: 100%;
   font-weight: 300;
   cursor: pointer;
+  padding: 3px;
   &:focus {
     outline: none;
   }
@@ -122,6 +123,9 @@ code {
   }
   .geographySelector {
     padding: 0 $ui-margin 12px $ui-margin;
+    select {
+      background-color: $very-light-gray;
+    }
   }
   .ui-controls {
     overflow: hidden;
@@ -130,6 +134,7 @@ code {
     }
     .import {
       padding: 0 $ui-margin 12px $ui-margin;
+      border-top: 1px solid $very-light-gray;
       &.active {
         background-color: $very-light-gray;
         border-left: 3px solid $gray;
@@ -170,12 +175,26 @@ code {
       max-height: 70px;
       overflow-y: scroll;
     }
+    .submit-custom {
+      margin: 5px 0;
+      background-color: white;
+      padding: 5px;
+      border-radius: 3px;
+      display: inline-block;
+      border: 1px solid $light-gray;
+      cursor: pointer;
+      opacity: 0.3;
+      &.active {
+        opacity: 1;
+      }
+    }
   }
   .dataset-select {
     width: 100%;
   }
   .instruction {
     margin-top: 10px;
+    line-height: 1.2em;
   }
   .resolution-slider {
     label {
