fix missing font

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans');
 @import 'reset';
 @import 'variables';
 @import 'base';
